<resources>
    <string name="app_name">Print It Easy</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email ID</string>
    <string name="prompt_fullName">Full Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="noAccount">"Don't have an account?"</string>
    <string name="logo">logo</string>
    <string name="background">bg</string>
    <string name="textView">TextView</string>
    <string name="imgView">TODO</string>
    <string name="signUp">Sign Up</string>
    <string name="textView1">TextView</string>
    <string name="already_user">Already have an account?</string>
    <string name="textView2">TextView</string>
    <!-- Home Screen -->
    <string name="home">Home</string>
    <string name="fav">Favourites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="userEmail">User Email</string>
    <string name="logOut">Logout</string>
    <string name="shops">Shops</string>
    <string name="shopName">ShopName_1</string>
    <string name="shopPhoto">ShopPhoto</string>
    <string name="Rate">Rate : </string>
    <string name="bAndW">B &amp; W:</string>
    <string name="Color">Color:</string>
    <string name="address1">Central Library,MNNIT</string>
    <string name="address2">Address : </string>
    <string name="upload">Select File</string>
    <string name="bw">Black &amp; White</string>
    <string name="color">Color</string>
    <string name="noc">No. of Copies :</string>
    <string name="estimate">Estimated Cost :</string>
    <string name="other">Other Description …</string>
    <string name="submit">Submit</string>
    <string name="perSheet">/sheet</string>


</resources>

