<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/logoFrag"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/fileSelectButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/rounded_text"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:text="@string/upload"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/bwText"
        android:layout_width="90dp"
        android:layout_height="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="162dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/bw"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="162dp"
        android:layout_toEndOf="@+id/bwText"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/color"
        android:textColor="@color/textColor" />

    <TextView
        android:id="@+id/noc"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_below="@id/bwText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/noc"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/otherDescription"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:autofillHints="@string/other"
        android:background="@drawable/desc"
        android:gravity="clip_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp"
        android:hint="@string/other"
        android:inputType="textMultiLine"
        android:maxLength="150"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/bgColor"
        android:textColorHint="@color/bgColor" />

    <RadioGroup
        android:id="@+id/choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/bwText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="162dp"

        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/checkBoxBw"
            android:checked="true"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/textColor" />

        <RadioButton
            android:id="@+id/checkBoxColor"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/textColor" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextNoc"
        android:layout_width="40dp"
        android:layout_height="32dp"
        android:layout_toEndOf="@id/noc"
        android:layout_marginStart="20dp"
        android:layout_below="@id/bwText"
        android:layout_marginTop="20dp"
        android:importantForAutofill="no"
        android:background="@color/unselectedIcon"
        android:ems="10"
        android:labelFor="@id/editTextNoc"
        android:paddingStart="5dp"
        android:paddingEnd="5dp" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/rounded_text"
        android:text="@string/submit"
        android:textColor="@color/textColor" />
    <ProgressBar
        android:id="@+id/progressHorizontal"
        android:theme="@style/AppTheme"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="multiply"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        style="?android:attr/progressBarStyleHorizontal"
        />





</RelativeLayout>